--- a/ConsoleProject/Service/Service.csproj
+++ b/ConsoleProject/Service/Service.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Respository\Respository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
